--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,3 @@
 # Team
 # @luongvo is the Team Lead
-* @suho @luongvo @phongvhd93 @markgravity @lydiasama
+* @suho @luongvo @phongvhd93 @markgravity @lydiasama @AVI5HEK @kaungkhantsoe
