--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,13 @@
-name: Run unit tests and review pull request
+name: Test
 
 on:
   pull_request:
     types: [ opened, edited, reopened, synchronize ]
+  push:
+    branches-ignore:
+      - develop
+      - 'release/**'
+      - main
 
 jobs:
   run_unit_tests_and_review_pull_request:
@@ -16,11 +21,11 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
-      - name: Checkout source code
+      - name: Check out source code
         uses: actions/checkout@v2.3.2
 
       - name: Cache Gradle
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: |
             ~/.gradle/caches/modules-*
@@ -33,7 +38,7 @@ jobs:
       - name: Run Detekt
         run: ./gradlew detekt
 
-      - name: Run Android Lint
+      - name: Run Lint
         run: ./gradlew lint
 
       - name: Run unit tests with Kover
@@ -43,24 +48,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: '2.7'
-
-      - name: Cache gems
-        uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-gems-
-
-      - name: Install Bundle and check environment versions
-        run: |
-          echo 'Install Bundle'
-          bundle config path vendor/bundle
-          bundle install
-          echo 'Check environment setup versions'
-          ruby --version
-          gem --version
-          bundler --version
+          bundler-cache: true
 
       - name: Run Danger to wrap up the review
         env:
