--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,7 +1,7 @@
 name: Test
 on:
   pull_request:
-    types: [ opened, synchronize, reopened ]
+    types: [opened, synchronize, reopened]
 
 jobs:
   test:
@@ -19,14 +19,14 @@ jobs:
     # before this "generate_sample_project" job will run
     needs: test
     name: Generate the sample project
-    runs-on: macOS-12
+    runs-on: macos-latest
     timeout-minutes: 30
     steps:
       - name: Check out
         uses: actions/checkout@v3
         with:
           ref: ${{ github.head_ref }}
-          submodules: 'recursive'
+          submodules: "recursive"
 
       - name: Remove the old sample project
         run: rm -rf sample
