--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ios"]
 	path = ios
 	url = https://github.com/nimblehq/ios-templates.git
+[submodule "android"]
+	path = android
+	url = git@github.com:nimblehq/android-templates.git
