--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,9 @@ jobs:
           ref: ${{ github.head_ref }}
           submodules: "recursive"
 
+      - name: Preserve ArkanaKeys folder
+        run: cp -r ./sample/ios/ArkanaKeys ./
+
       - name: Remove the old sample project
         run: rm -rf sample
 
@@ -39,6 +42,9 @@ jobs:
         run: |
           count=$(git status sample --porcelain | wc -l)
           echo "count=$count" >> $GITHUB_OUTPUT
+
+      - name: Copy back ArkanaKeys folder
+        run: cp -r ./ArkanaKeys ./sample/ios
 
       - name: Commit & push the sample project changes
         if: steps.changes.outputs.count > 0
