--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,6 +18,9 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
 
+      - name: Decode buildKonfig properties
+        run: echo ${{ secrets.BUILD_KONFIG_PROPERTIES }} | base64 --decode > ./buildKonfig.properties
+
       - name: Cache Gradle
         uses: actions/cache@v3
         with:
