[#13] Add JsonApi, move dependencies to plugins and minor reviews resolves

--- a/detekt.yml
+++ b/detekt.yml
@@ -173,7 +173,7 @@ naming:
     minimumFunctionNameLength: 3
   FunctionNaming:
     active: true
-    functionPattern: '[a-zA-Z][a-zA-Z0-9]*'
+    functionPattern: '^([a-z$][a-zA-Z$0-9]*)|(`.*`)$'
     ignoreAnnotated: [ 'Composable' ]
   MatchingDeclarationName:
     active: true
