--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -88,7 +88,7 @@ jobs:
         working-directory: ./
 
       - name: Bundle install
-        run: bundle install --path vendor/bundle
+        run: bundle install
 
       - name: Cache Pods
         uses: actions/cache@v3
