[#39] Fix: Running Danger SwiftFormat from non-root directory

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -167,6 +167,14 @@ jobs:
       - name: Clean up previous code coverage report
         run: bundle exec fastlane cleanUpOutput
 
+      - name: __Workaround__ Running Danger SwiftFormat from non-root directory
+        run: |
+          # Find the path of danger_swiftformat
+          danger_swiftformat_path=$(echo "$(gem which danger_swiftformat)" | sed 's/\/danger_swiftformat.rb//')
+          echo $danger_swiftformat_path
+          # Insert a map operator in the "find_swift_files" method to remove "sample/ios/" prefix from all files.
+          sed -i '' "s/.uniq/.uniq.map { |file| file.partition('sample\/ios\/').last }/g" "$danger_swiftformat_path/swiftformat/plugin.rb"
+
       - name: Run Danger to wrap up the review
         env:
           DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
