--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,4 @@
 [submodule "android"]
 	path = android
 	url = git@github.com:nimblehq/android-templates.git
-	branch = feature/replace-hilt-with-koin
+	branch = feature/moko-resources
