--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,6 +2,10 @@ name: Code analysis, test and generate sample project
 on:
   pull_request:
     types: [ opened, synchronize, reopened, ready_for_review ]
+    branches-ignore:
+      - main
+      - develop
+      - 'release/*'
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
