[Chore] Ignore release keystore file out of git

--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,9 @@ local.properties
 xcuserdata
 buildKonfig.properties
 
+# Keystore
+config/release.keystore
+
 # iOS
 ios/Pods/
 ios/fastlane/README.md
